ajout d'un fichier à un sinistre
