# assurmoi/routes/sinisters.js
@@ -9,6 +9,8 @@ const {
   deleteSinister,
   validateSinister,
   updateDocuments,
+  createSinisterDocument,
+  getSinisterDocuments,
   getRequest,
   getHistory,
   createRequest,
@@ -20,6 +22,8 @@ router.get("/:id", getSinister);
 router.put("/:id", updateSinister);
 router.delete("/:id", deleteSinister);
 router.patch("/:id/validate", validateSinister);
+router.get("/:id/documents", getSinisterDocuments);
+router.post("/:id/documents", createSinisterDocument);
 router.patch("/:id/documents", updateDocuments);
 router.get("/:id/request", getRequest);
 router.get("/:id/history", getHistory);
